# framework_rgbafan

./: .gitignore  Cargo.toml  README.md  ramp-fan.sh  rustfmt.toml
src/: animations.rs  cli.rs  consts.rs  effects.rs  fan_speed.rs  main.rs  mpd_visualizer.rs  rgb-fan.service  rgbfan_wrapper
